[jpa] 코드 정리